--- a/css/styles.css
+++ b/css/styles.css
@@ -55,10 +55,11 @@ body {
   font-size: 4vh;
 }
 
-section  h1, h2 {
+section h1 h2 {
   margin: 0;
   line-height: 1.2;
   font-size: 5vh;
+
 }
 
 
@@ -108,7 +109,7 @@ legend::before{
   position: absolute;
   width: 100%;
   height: 1.5rem;
-  background: #ddd;
+  background: #5bc0de;
   left: 0;
   z-index: -1;
 }
