add identity form and add js to define variables based on user input

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,8 +84,12 @@ nav a {
 nav a:hover{
   background-color: #5bc0de;
 }
-/* figure out how to not use id for show/hiding using js?*/
+
 #personalinfo {
+  display: none;
+}
+
+#identity {
   display: none;
 }
 
